hphp/test/zend/good/ext-standard-strings/bug40637.php
<?php

$html = '<span title="Bug \' Trigger">Text</span>';
var_dump(strip_tags($html));

echo "Done\n";
?>